# A-Life

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  architecture_decisions.md  schooling_and_teacher_architecture.md
.cargo/: config.toml
alife/: Cargo.toml
alife/src/: lib.rs  profiles.rs
crates/alife_bevy_adapter/: Cargo.toml  README.md
crates/alife_bevy_adapter/examples/: minimal_adapter.rs
crates/alife_bevy_adapter/src/: action.rs  avian3d.rs  components.rs  entity_map.rs  lib.rs  math.rs  plugin.rs  sensory.rs
crates/alife_bevy_adapter/tests/: bevy_adapter_contracts.rs
crates/alife_core/: AGENTS.md  Cargo.toml  README.md
crates/alife_core/src/: action.rs  action_abi.rs  activity.rs  adapter.rs  blake3_digest.rs  brain_class.rs  canonical_digest.rs  chemistry.rs  diagnostics.rs  error.rs  evidence_digest.rs  experience.rs  foundation.rs  genome.rs  grounding.rs  ids.rs  language.rs  learning.rs  lib.rs  lineage.rs  lobe.rs  math.rs  memory.rs  memory_query.rs  neural.rs  packed_log.rs  perception.rs  phenotype.rs  post_seal_lifetime.rs  reference_brain.rs  routing.rs  sensory_abi.rs  sleep.rs  topology.rs  traits.rs  units.rs  validation.rs  version.rs
crates/alife_core/tests/: abi_validation_errors.rs  action_arbitration.rs  brain_topology.rs  candidate_memory_queries.rs  candidate_memory_retrieval.rs  canonical_digest.rs  chemistry_homeostasis.rs  cpu_reference_brain_tick.rs  experience_neural_decision.rs  experience_three_phase.rs  genome_weight_split.rs  gpu_benchmark_protocol.rs  gpu_sleep_contracts.rs  id_math_units.rs  memory_expectancy.rs  n2048_foundation_abi.rs  neural_projection_cpu.rs  packed_experience_logging.rs  perception_candidates.rs  perception_digest_golden.rs  phenotype_compiler.rs  post_seal_lifetime_deltas.rs  production_brain_budgets.rs  scaffold_invariants.rs  sensory_abi_contexts.rs  sensory_profiles.rs  sleep_consolidation.rs  three_factor_learning.rs  topological_map.rs  topology_sidecar_degradation.rs
crates/alife_game_app/: AGENTS.md  Cargo.toml  README.md  app_bundle_manifest.json  environment_manifest.json  placeholder_art_manifest.json
crates/alife_game_app/src/: advanced_gameplay_ux.rs  affordance_loop.rs  alpha_art_assets.rs  alpha_tick_stability.rs  app_bundle_ingestion.rs  app_shell.rs  behavior_comparison_lab.rs  behavior_tuning.rs  bevy_shell.rs  brain_policy.rs  camera_inspector.rs  cognition_debug_timeline.rs  content_tutorial_authoring.rs  creature_animation_style.rs  creature_assembly.rs  creature_coat.rs  creature_part_assets.rs  creature_part_catalog.rs  creature_part_genetics.rs  creature_part_pose.rs  creature_surface_details.rs  creature_visual_geometry.rs  creature_visuals.rs  curriculum_authoring.rs  double_buffered_scheduler.rs  drive_coupled_audio_vfx.rs  ecological_soak.rs  ecology_loop.rs  environment_launcher.rs  feedback_polish.rs  gpu_authority_telemetry.rs  gpu_closed_loop_promotion.rs  gpu_evidence.rs  gpu_graphics_performance.rs  gpu_live_runtime.rs  gpu_product_telemetry.rs  gpu_sleep_scheduler.rs  graphical_ecology.rs  graphical_gpu_runtime_controller.rs  graphical_lifecycle.rs  (+48 more)
crates/alife_game_app/tests/: app_shell.rs  automatic_gpu_sleep.rs  automatic_sleep_scheduler.rs  fvr01_production_frontend.rs  fvr02_production_save.rs  fvr03_voxel_renderer.rs  fvr08_final_cutover.rs  gpu_brain_authority_audit.rs  gpu_checkpoint_manifest_cas.rs  gpu_closed_loop_acceptance.rs  gpu_closed_loop_policy.rs  gpu_closed_loop_promotion.rs  gpu_closed_loop_soak.rs  gpu_learning_loop.rs  gpu_learning_sleep_acceptance.rs  gpu_memory_grounding_acceptance.rs  gpu_memory_loop.rs  gpu_profiled_evidence.rs  gpu_sleep_restore.rs  no_cpu_shadow_runtime.rs
crates/alife_gpu_backend/: AGENTS.md  Cargo.toml  README.md
crates/alife_gpu_backend/shaders/: closed_loop_abi.wgsl  closed_loop_activity_validation.wgsl  closed_loop_clear_diagnostics.wgsl  closed_loop_consolidate.wgsl  closed_loop_decode.wgsl  closed_loop_eligibility.wgsl  closed_loop_encode.wgsl  closed_loop_memory_context.wgsl  closed_loop_plasticity.wgsl  closed_loop_recurrent.wgsl  closed_loop_replay_learning.wgsl  p24_contract.wgsl  p25_static_forward.wgsl  p26_plasticity.wgsl  p27_supertile_routing.wgsl  p28_recompaction_autophagy.wgsl  true25d_stylization_postprocess.wgsl
crates/alife_gpu_backend/src/: buffers.rs  closed_loop_activity.rs  closed_loop_admission.rs  closed_loop_buffers.rs  closed_loop_checkpoint.rs  closed_loop_learning.rs  closed_loop_memory.rs  closed_loop_pipeline.rs  closed_loop_runtime.rs  closed_loop_sleep.rs  full_runtime.rs  lib.rs  plasticity.rs  recompaction.rs  routing_masks.rs  runtime.rs  shader_contract.rs  static_forward.rs  timing.rs
crates/alife_gpu_backend/tests/: closed_loop_activity.rs  closed_loop_admission.rs  closed_loop_buffer_contracts.rs  closed_loop_checkpoint.rs  closed_loop_eligibility.rs  closed_loop_fast_plasticity.rs  closed_loop_gpu_behavior.rs  closed_loop_learning_buffers.rs  closed_loop_memory_context.rs  closed_loop_runtime.rs  closed_loop_sleep.rs  closed_loop_wgsl.rs  gpu_buffer_contracts.rs  gpu_runtime_performance.rs  gpu_timing_report.rs  plasticity_oja_parity.rs  property_fuzz_parity_gating.rs  recompaction_autophagy.rs  static_forward_parity.rs  supertile_routing_masks.rs
crates/alife_semantic/: AGENTS.md  Cargo.toml  README.md
crates/alife_semantic/src/: fake.rs  gaussian.rs  lib.rs  local_llamacpp.rs  local_ollama.rs  local_slm_prior.rs  providers.rs  semantic.rs
crates/alife_semantic/tests/: semantic_gaussian_adapter.rs
crates/alife_tools/: AGENTS.md  Cargo.toml  README.md
crates/alife_tools/src/: benchmark.rs  creature_part_builder.rs  g16_content_authoring.rs  lib.rs  p30_bundle.rs  p30_cluster.rs  p30_markers.rs  p30_summary.rs  p31_offline_tools.rs  p32_weights.rs  p33_evolution.rs  p35_playground.rs
crates/alife_tools/tests/: benchmark_tiers.rs  content_authoring.rs  creature_part_visual_contract.rs  evolution_genome_lab.rs  performance_contract.rs  playground_examples.rs  release_gate.rs  repo_invariants.rs  save_load_configs_assets.rs
(+756 files in other folders)
