[package]
name = "alife"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "multi-threaded",
] }
bytemuck = { version = "1.15", features = ["derive"] }
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
wgpu = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }
