[package]
name = "alife_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags.workspace = true
blake3.workspace = true
bytemuck.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
