[package]
name = "alife_game_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alife_core = { path = "../alife_core" }
alife_bevy_adapter = { path = "../alife_bevy_adapter", optional = true }
alife_gpu_backend = { path = "../alife_gpu_backend", optional = true }
alife_school = { path = "../alife_school" }
alife_semantic = { path = "../alife_semantic", features = ["fake-semantic-provider"] }
alife_world = { path = "../alife_world" }
bevy = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []
bevy-app = ["dep:alife_bevy_adapter", "dep:bevy"]
gpu-runtime = ["dep:alife_gpu_backend"]
