[package]
name = "alife_game_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alife_core = { path = "../alife_core" }
alife_bevy_adapter = { path = "../alife_bevy_adapter", optional = true }
alife_gpu_backend = { path = "../alife_gpu_backend", optional = true }
alife_school = { path = "../alife_school" }
alife_semantic = { path = "../alife_semantic", features = ["fake-semantic-provider", "local-llamacpp"] }
alife_world = { path = "../alife_world" }
bevy = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []
bevy-app = [
    "dep:alife_bevy_adapter",
    "dep:bevy",
    "bevy/default_app",
    "bevy/default_platform",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_sprite_render",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/bevy_ui_render",
]
gpu-runtime = ["dep:alife_gpu_backend"]
