[package]
name = "alife_gpu_backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alife_core.workspace = true
pollster.workspace = true
wgpu.workspace = true

[features]
default = []
gpu-tests = []

[dev-dependencies]
naga = { version = "29.0.3", features = ["wgsl-in"] }
