[package]
name = "alife_gpu_backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alife_core.workspace = true
bytemuck.workspace = true
naga = { version = "29.0.3", features = ["wgsl-in"] }
pollster.workspace = true
serde.workspace = true
wgpu.workspace = true

[features]
default = []
gpu-tests = []
