[package]
name = "alife_semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alife_core.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
gaussian-adapter = []
fake-semantic-provider = ["gaussian-adapter"]
local-llamacpp = ["gaussian-adapter"]
